# yt-dlp

./: .dockerignore  .gitignore
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md
documentation/serverjs/: CHANGELOG.md  CLEANUP_IMPLEMENTATION.md  DOCKER.md  FRONTEND_COMPATIBILITY.md  INDEX.md  QUICK_START.md  README.md  RELEASE_NOTES.md  (+1 more)
serverjs/: .dockerignore  .env.example  AUDIO_STREAMING_FIX.md  BUGFIXES_v1.2.1.md  CHANGELOG.md  CLEANUP.md  COMPARISON.md  DEPLOYMENT.md  DOCKER_PYTHON_FIX.md  Dockerfile  ERROR_HANDLING.md  EXAMPLES.md  INDEX.md  INTEGRATION_GUIDE.md  README.md  SUMMARY.md  cleanup.js  docker-compose.yml  docker-quick-start.sh  encryption.js  index.js  package-lock.json  package.json  test.sh
serverpy/: .env.example  .env.multi  .gitignore  COMPARISON.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INDEX.md  MEMORY_ANALYSIS.md  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STREAMING_IMPLEMENTATION.md  STREAM_URL_USAGE.md  TROUBLESHOOTING_403.md  __init__.py  cleanup.py  config.py  deploy-multi.sh  docker-compose.multi.yml  docker-compose.no-vpn.yml  docker-compose.yml  encryption.py  gunicorn.conf.py  main.py  nginx.multi.conf  requirements.txt  slideshow.py  start.sh  test-stream.sh  test.sh  test_streaming.py  vpn_reconnect.py
serverrs/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.multi.yml  docker-compose.no-vpn.yml  docker-compose.yml
serverrs/src/: cache.rs  cleanup.rs  config.rs  encryption.rs  main.rs  response.rs  slideshow.rs  stream.rs  vpn.rs  ytdlp.rs
serverx/: .dockerignore  Dockerfile  README.md  __init__.py  docker-compose.prod.yml  docker-compose.yml  example_usage.py  main.py  requirements.txt
serverx-rs/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
serverx-rs/src/: main.rs
(+3 files in other folders)
