[package]
name = "serverx-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex-lite = "0.1"
redis = { version = "0.24", features = ["tokio-comp"] }
uuid = { version = "1.7", features = ["v4"] }
reqwest = { version = "0.11", features = ["stream"] }
getrandom = "=0.2.15"
